Bug 456510 - Ticket documents not available
Summary: Ticket documents not available
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Android Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-09 13:08 UTC by Tobias Fella
Modified: 2022-07-11 16:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2022-07-09 13:08:52 UTC
SUMMARY

On android, the drawer for the ticket page says there are two documents available, but when opening it, the list is empty and says "no documents attached[...]"


STEPS TO REPRODUCE
1. Import tickets KMail -> Nextcloud -> Davx5 -> Itinerary
2. Open Itinerary -> ticket
3. Open sidebar: "Documents (2)"
4. Click -> no documents

SOFTWARE/OS VERSIONS
latest nightly android build
Comment 1 Volker Krause 2022-07-09 18:33:28 UTC
Attached documents don't survive Android's system calendar (that doesn't support ical attachments), so the documents not being there is unfortunately expected, but we should then remove/hide document references if the documents are missing.

Importing via KDE Connect should include the documents, and so should importing the PDFs directly.
Comment 2 Bug Janitor Service 2022-07-10 20:49:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/itinerary/-/merge_requests/79
Comment 3 Tobias Fella 2022-07-11 16:07:53 UTC
Git commit 7e58952c041614b0edc1ae29a414a2beb6532afa by Tobias Fella.
Committed on 11/07/2022 at 15:51.
Pushed by tfella into branch 'master'.

Check availability of documents while counting them

Fixes the cases where documents are counted but not available.
This can happen if the events come from android's system calendar or if the document was deleted from another event's document list.
In both of these cases, the reference should probably be deleted instead, but this is a good safety measure nevertheless.

M  +1    -0    src/app/DetailsPage.qml
M  +1    -0    src/app/TimelineDelegate.qml
M  +19   -2    src/app/timelinedelegatecontroller.cpp
M  +5    -0    src/app/timelinedelegatecontroller.h

https://invent.kde.org/pim/itinerary/commit/7e58952c041614b0edc1ae29a414a2beb6532afa