src/app/TimelineDelegate.qml
@@ -38,6 +38,7 @@ Kirigami.AbstractCard {
         reservationManager: ReservationManager
         liveDataManager: LiveDataManager
         transferManager: TransferManager
+        documentManager: DocumentManager
     }
     property alias arrival: _controller.arrival
     property alias departure: _controller.departure
